[metadata]
name = atmfjstc-abstract-codegen
version = attr: atmfjstc.lib.abstract_codegen.__version__

author = Atom of Justice
author_email = atmfjstc@protonmail.com

description = A model and utilities for greatly easing code generation for nearly any language

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Code Generators
    Typing :: Typed


[options]
package_dir =
    =src
packages = find_namespace:

install_requires=
    atmfjstc-py-lang-utils>=1.3,<2
    atmfjstc-ast>=1.4,<2
    atmfjstc-text-utils>=1.4,<2

python_requires = >=3.7

zip_safe = True


[options.packages.find]
where = src