[metadata]
name = atmfjstc-archive-forensics
version = attr: atmfjstc.lib.archive_forensics.__version__

author = Atom of Justice
author_email = atmfjstc@protonmail.com

description = Utilities for decoding archive format-specific data enums and binary structures

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: System :: Archiving
    Typing :: Typed


[options]
package_dir =
    =src
packages = find_namespace:

install_requires=
    atmfjstc-iso-timestamp>=1.1.0,<2
    atmfjstc-binary-utils>=1.2.0,<2
    atmfjstc-os-forensics>=0.2.1,<2
    atmfjstc-py-lang-utils>=1.11.0,<2

python_requires = >=3.7

zip_safe = True


[options.packages.find]
where = src