[metadata]
name = atmfjstc-ast
version = attr: atmfjstc.lib.ast.__version__

author = Atom of Justice
author_email = atmfjstc@protonmail.com

description = Base class for building Abstract Syntax Trees

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Code Generators
    Typing :: Typed


[options]
package_dir =
    =src
packages = find_namespace:

install_requires=
    atmfjstc-py-lang-utils>=1,<2
    atmfjstc-xtd-type-spec>=1.1,<2
    atmfjstc-ez-repr>=1.1,<2

python_requires = >=3.7

zip_safe = True


[options.packages.find]
where = src