[metadata]
name = atmfjstc-async-utils
version = attr: atmfjstc.lib.async_utils.__version__

author = Atom of Justice
author_email = atmfjstc@protonmail.com

description = Utilities for async code

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: AsyncIO
    Typing :: Typed


[options]
package_dir =
    =src
packages = find_namespace:

install_requires=

python_requires = >=3.9

zip_safe = True


[options.packages.find]
where = src