[metadata]
name = atmfjstc-binary-utils
version = attr: atmfjstc.lib.binary_utils.__version__

author = Atom of Justice
author_email = atmfjstc@protonmail.com

description = Utilities for parsing binary and bit-level data

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Typing :: Typed


[options]
package_dir =
    =src
packages = find_namespace:

install_requires=
    atmfjstc-file-utils>=1.2,<2

python_requires = >=3.7

zip_safe = True


[options.packages.find]
where = src