[metadata]
name = atmfjstc-cli-utils
version = attr: atmfjstc.lib.cli_utils.__version__

author = Atom of Justice
author_email = atmfjstc@protonmail.com

description = Utilities for command-line programs

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Console
    Typing :: Typed


[options]
package_dir =
    =src
packages = find_namespace:

install_requires=
    termcolor>=1,<2
    colorama>=0.4.6,<2
    atmfjstc-text-utils>=1.3,<2
    atmfjstc-error-utils>=1,<2

python_requires = >=3.7

zip_safe = True


[options.packages.find]
where = src
