[metadata]
name = atmfjstc-daemon-utils
version = attr: atmfjstc.lib.daemon_utils.__version__

author = Atom of Justice
author_email = atmfjstc@protonmail.com

description = Common mechanisms used by daemons for responding to requests, handling subtasks etc.

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Typing :: Typed

[options]
package_dir =
    =src
packages = find_namespace:

install_requires=

python_requires = >=3.9

zip_safe = True


[options.packages.find]
where = src