[metadata]
name = atmfjstc-ez-repr
version = attr: atmfjstc.lib.ez_repr.__version__

author = Atom of Justice
author_email = atmfjstc@protonmail.com

description = Base class that provides a smarter __repr__() function for your objects

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Typing :: Typed


[options]
package_dir =
    =src
packages = find_namespace:

install_requires=
    atmfjstc-py-lang-utils>=1.10,<2

python_requires = >=3.7

zip_safe = True


[options.packages.find]
where = src