[metadata]
name = atmfjstc-file-utils
version = attr: atmfjstc.lib.file_utils.__version__

author = Atom of Justice
author_email = atmfjstc@protonmail.com

description = Miscellaneous utilities for working with files in general (no specific format)

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Typing :: Typed


[options]
package_dir =
    =src
packages = find_namespace:

install_requires=
    atmfjstc-error-utils>=1.1,<2

python_requires = >=3.8

zip_safe = True


[options.packages.find]
where = src