[metadata]
name = atmfjstc-gz-file
version = attr: atmfjstc.lib.gz_file.__version__

author = Atom of Justice
author_email = atmfjstc@protonmail.com

description = Advanced interface for reading multi-member GZip files with all metadata

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: System :: Archiving :: Compression
    Typing :: Typed


[options]
package_dir =
    =src
packages = find_namespace:

install_requires=
    atmfjstc-binary-utils>=1,<2
    atmfjstc-file-utils>=1.2,<3

python_requires = >=3.7

zip_safe = True


[options.packages.find]
where = src