[metadata]
name = atmfjstc-iso-timestamp
version = attr: atmfjstc.lib.iso_timestamp.__version__

author = Atom of Justice
author_email = atmfjstc@protonmail.com

description = Utilities for working with ISO format text timestamps

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Typing :: Typed


[options]
package_dir =
    =src
packages = find_namespace:

install_requires=

python_requires = >=3.7

zip_safe = True


[options.packages.find]
where = src