[metadata]
name = atmfjstc-json-schema-utils
version = attr: atmfjstc.lib.json_schema_utils.__version__

author = Atom of Justice
author_email = atmfjstc@protonmail.com

description = Utilities for working with JSONSchemas

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Typing :: Typed


[options]
package_dir =
    =src
packages = find_namespace:

install_requires=
    atmfjstc-py-lang-utils>=1.11.3,<2
    jsonschema>=3,<5

python_requires = >=3.7

zip_safe = True


[options.packages.find]
where = src