[metadata]
name = atmfjstc-os-forensics
version = attr: atmfjstc.lib.os_forensics.__version__

author = Atom of Justice
author_email = atmfjstc@protonmail.com

description = Utilities for decoding OS and filesystem-specific data enums and binary structures

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: System :: Filesystems
    Topic :: System :: Operating System
    Typing :: Typed


[options]
package_dir =
    =src
packages = find_namespace:

install_requires=
    atmfjstc-iso-timestamp>=1.0.0,<2
    atmfjstc-binary-utils>=1.2.0,<2

python_requires = >=3.7

zip_safe = True


[options.packages.find]
where = src