[metadata]
name = atmfjstc-osx-daemon
version = attr: atmfjstc.lib.osx_daemon.__version__

author = Atom of Justice
author_email = atmfjstc@protonmail.com

description = Simple harness for daemons running on OS X

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Topic :: System
    Typing :: Typed


[options]
package_dir =
    =src
packages = find_namespace:

install_requires=
    atmfjstc-cli-utils>=1.8.0,<2
    pidlockfile>=0.0

python_requires = >=3.7

zip_safe = True


[options.packages.find]
where = src