[metadata]
name = atmfjstc-py-lang-utils
version = attr: atmfjstc.lib.py_lang_utils.__version__

author = Atom of Justice
author_email = atmfjstc@protonmail.com

description = Atom of Justice's collection of Python language idioms and helpers for any application

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Typing :: Typed


[options]
package_dir =
    =src
packages = find_namespace:

# Note to self: think twice before adding any install_requires here! This is intended to be a fundamental package.
install_requires=

python_requires = >=3.7

zip_safe = True


[options.packages.find]
where = src