[metadata]
name = atmfjstc-stay-awake
version = attr: atmfjstc.lib.stay_awake.__version__

author = Atom of Justice
author_email = atmfjstc@protonmail.com

description = Prevents the system from automatically going to sleep

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: System :: Operating System
    Typing :: Typed


[options]
package_dir =
    =src
packages = find_namespace:

install_requires=

python_requires = >=3.7

zip_safe = True


[options.packages.find]
where = src