[metadata]
name = atmfjstc-struct-convert
version = attr: atmfjstc.lib.struct_convert.__version__

author = Atom of Justice
author_email = atmfjstc@protonmail.com

description = Utilities for converting between data structures

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Typing :: Typed


[options]
package_dir =
    =src
packages = find_namespace:

install_requires=
    atmfjstc-py-lang-utils>=1.11.5,<2

python_requires = >=3.9

zip_safe = True


[options.packages.find]
where = src