[metadata]
name = atmfjstc-sysd-daemon
version = attr: atmfjstc.lib.sysd_daemon.__version__

author = Atom of Justice
author_email = atmfjstc@protonmail.com

description = Simple harness for Linux daemons running via systemd

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Topic :: System
    Typing :: Typed


[options]
package_dir =
    =src
packages = find_namespace:

install_requires=
    atmfjstc-cli-utils>=1.8.0,<2
    pidlockfile>=0.0
    sdnotify>=0.3

python_requires = >=3.7

zip_safe = True


[options.packages.find]
where = src
