[metadata]
name = atmfjstc-text-utils
version = attr: atmfjstc.lib.text_utils.__version__

author = Atom of Justice
author_email = atmfjstc@protonmail.com

description = Miscellaneous utilities for processing plain text

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Text Processing
    Typing :: Typed


[options]
package_dir =
    =src
packages = find_namespace:

install_requires=
    atmfjstc-py-lang-utils>=1,<2

python_requires = >=3.7

zip_safe = True


[options.packages.find]
where = src