[metadata]
name = atmfjstc-xtd-type-spec
version = attr: atmfjstc.lib.xtd_type_spec.__version__

author = Atom of Justice
author_email = atmfjstc@protonmail.com

description = An extended type specification and improved isinstance/issubclass variants to go with it

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Typing :: Typed


[options]
package_dir =
    =src
packages = find_namespace:

install_requires=
    atmfjstc-py-lang-utils>=1,<2

python_requires = >=3.7

zip_safe = True


[options.packages.find]
where = src